// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Components/TreeSelect Ellipsis 1`] = `
<div
  className="css-p9y3cy-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-6"
        id="checkbox-6-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-6-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-6"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          All
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-7"
        id="checkbox-7-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-7-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-7"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Shapes
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-8"
        id="checkbox-8-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-8-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-8"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rectangle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-9"
        id="checkbox-9-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-9-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-9"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          circle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-10"
        id="checkbox-10-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-10-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-10"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rhombus
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-11"
        id="checkbox-11-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-11-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-11"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Pass
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-12"
        id="checkbox-12-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-12-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-12"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          REALLY LONG TITLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE!!!!!!!!!!!!!!!!!
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-13"
        id="checkbox-13-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-13-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-13"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Skip
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-14"
        id="checkbox-14-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-14-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-14"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Silent Fail
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Components/TreeSelect No All Button 1`] = `
<div
  className="css-p9y3cy-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-15"
        id="checkbox-15-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-15-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-15"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Shapes
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-16"
        id="checkbox-16-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-16-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-16"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rectangle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-17"
        id="checkbox-17-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-17-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-17"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          circle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-18"
        id="checkbox-18-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-18-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-18"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rhombus
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-19"
        id="checkbox-19-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-19-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-19"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Pass
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-20"
        id="checkbox-20-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-20-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-20"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Failed
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-21"
        id="checkbox-21-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-21-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-21"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Skip
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-22"
        id="checkbox-22-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-22-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-22"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Silent Fail
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Components/TreeSelect No Dropdown 1`] = `
<div
  className="css-p9y3cy-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-23"
        id="checkbox-23-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-23-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-23"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Shapes
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-24"
        id="checkbox-24-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-24-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-24"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rectangle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-25"
        id="checkbox-25-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-25-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-25"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          circle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-26"
        id="checkbox-26-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-26-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-26"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rhombus
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-27"
        id="checkbox-27-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-27-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-27"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Pass
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-28"
        id="checkbox-28-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-28-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-28"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Failed
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-29"
        id="checkbox-29-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-29-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-29"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Skip
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-30"
        id="checkbox-30-label"
      >
        <input
          aria-checked={true}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-30-label"
          checked={true}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-30"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
        >
          <svg
            className="leafygreen-ui-1degv9q"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Silent Fail
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots Components/TreeSelect No Initial Values 1`] = `
<div
  className="css-p9y3cy-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-31"
        id="checkbox-31-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-31-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-31"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          All
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-32"
        id="checkbox-32-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-32-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-32"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Shapes
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-33"
        id="checkbox-33-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-33-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-33"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rectangle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-34"
        id="checkbox-34-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-34-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-34"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          circle
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-1i6181l-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-35"
        id="checkbox-35-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-35-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-35"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          rhombus
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-36"
        id="checkbox-36-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-36-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-36"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Pass
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-37"
        id="checkbox-37-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-37-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-37"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          REALLY LONG TITLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE!!!!!!!!!!!!!!!!!
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-38"
        id="checkbox-38-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-38-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-38"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Skip
        </span>
      </label>
    </div>
  </div>
  <div
    className="css-u0wfkk-getCheckboxWrapper e1mpj03z3"
  >
    <div
      className="leafygreen-ui-55kazc cy-checkbox"
    >
      <label
        className="leafygreen-ui-rae0jp"
        htmlFor="checkbox-39"
        id="checkbox-39-label"
      >
        <input
          aria-checked={false}
          aria-disabled={false}
          aria-label="checkbox"
          aria-labelledby="checkbox-39-label"
          checked={false}
          className="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
          data-cy="checkbox"
          disabled={false}
          id="checkbox-39"
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
        />
        <div
          className="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
        >
          <svg
            className="leafygreen-ui-6caof5"
            fill="none"
            height="10"
            stroke="#FFFFFF"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
              stroke="#FFFFFF"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
        <div
          className="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
        />
        <span
          className="leafygreen-ui-1wmrjan"
        >
          Silent Fail
        </span>
      </label>
    </div>
  </div>
</div>
`;
